Calendar, contrast issues (#851)
* fix build

* build

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3929,8 +3929,8 @@ Card-like boxes.
 .flatpickr-day.selected,
 .flatpickr-day.selected:focus,
 .flatpickr-day.selected:hover {
-  background: #00a2c7;
-  border-color: #00a2c7;
+  background: #00798a;
+  border-color: #00798a;
   box-shadow: none;
   color: white; }
 
