--- a/assets/scss/components/_calendar.scss
+++ b/assets/scss/components/_calendar.scss
@@ -458,8 +458,8 @@ $calendarWidth: 310px;
 .flatpickr-day.selected,
 .flatpickr-day.selected:focus,
 .flatpickr-day.selected:hover {
-	background: $C_blue;
-	border-color: $C_blue;
+	background: #00798a;
+	border-color: #00798a;
 	box-shadow: none;
 	color: $C_textPrimaryInverted;
 }
